# KB-backbone

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  USAGE.md  compile_commands.json  package.xml  setup.py
include/: config.hpp  fail.hpp  freq_handler.cpp  frequency_multiplexer.hpp  rate_multiplexer.hpp  rated_publisher.hpp  rated_subscribe.hpp  rated_topic.hpp  subscriber.hpp
include/backbone/: topic_mgr.hpp
launch/: backbone.launch  python.launch  version_check.launch
msg/: CustomHeader.msg  TestMsg.msg
python/: frequency_multiplexer.py
python/backbone/: frequency_multiplexer.py  rated_publisher.py  rated_topic.py  version_checker.py
scripts/: client.py  multiplexer  server.py  source.py  version_checker
src/: debugger.cpp  echo_client.cpp  echo_server.cpp  first_client.cpp  generic_pub.cpp  listener.cpp  multiplexer.cpp  second_client.cpp  talker.cpp  temp_sensor.cpp
src/kb_backbone/: frequency_multiplexer.py
srv/: RateTopic.srv  ThrottleTopic.srv
test/: test_frequency_multiplexer.cpp  throttle.test
test_nodes/: talker.py
test_nodes/cpp/: multiplexer.cpp  second_client.cpp  source.cpp
test_nodes/python/: check_sub.py  checker.py  client.py  client2.py  debugger.py  server.py  source.py  version_check_source.py
